<resources>
    <string name="app_name">Pop Cine</string>

    <string name="content_authority">com.shabayekdes.popcine</string>

    <string name="error_message">
        An error has occurred. Please try again by clicking REFRESH
    </string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="title">Title</string>
    <string name="overview">Overview</string>
    <string name="release_date">Release date</string>
    <string name="screen_width_photo">w342</string>
    <string name="genres">Genres</string>
    <string name="vote_average">Vote average</string>
    <string name="favorites">Favorites</string>
    <string name="no_favorite_movies">There is no favorite movies</string>
    <string name="trailers">Trailers</string>
    <string name="reviews">Reviews</string>
    <string name="trailer_name">Trailer Name</string>
    <string name="play">play</string>
    <string name="review_separator">Review Separator</string>

</resources>
