<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.shabayekdes.popcine.MainActivity">

    <android.support.design.widget.TabLayout
        android:id="@+id/sort_type_tab_layout"
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        app:tabTextColor="@android:color/darker_gray"
        app:tabMode="scrollable"
        app:tabSelectedTextColor="@android:color/white"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TabItem
            android:id="@+id/popular_item"
            android:text="@string/popular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <android.support.design.widget.TabItem
            android:id="@+id/top_rated_item"
            android:text="@string/top_rated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <android.support.design.widget.TabItem
            android:id="@+id/favorites_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favorites" />

    </android.support.design.widget.TabLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/movies_rv"
        android:layout_width="@dimen/width_zero"
        android:layout_height="@dimen/width_zero"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sort_type_tab_layout"
        tools:numColumns="2"
        />

    <TextView
        android:id="@+id/tv_error_message_display"
        android:layout_width="@dimen/width_zero"
        android:layout_height="@dimen/width_zero"
        android:padding="16dp"
        android:text="@string/error_message"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:visibility="invisible"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sort_type_tab_layout" />

    <ProgressBar
        android:id="@+id/pb_loading_indicator"
        android:layout_width="@dimen/loading_indicator_width"
        android:layout_height="@dimen/loading_idicator_height"
        android:layout_gravity="center"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sort_type_tab_layout" />

</android.support.constraint.ConstraintLayout>
